# AdventOfCode

./: .gitignore  README.md
2015/haskell/: LICENSE  Makefile  aoc.cabal  package.yaml  stack.yaml
2015/haskell/app/: Main.hs
2015/haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  MyDialog.hs
2016/haskell/: aoc.cabal  package.yaml
2016/haskell/app/: Main.hs
2016/haskell/src/: Days.hs
2022/cpp/: .clang-tidy  CMakeLists.txt  autobuild.sh  main.cpp
2022/cpp/day01/: calorieCounting.cpp
2022/cpp/day02/: rockPaperScissors.cpp
2022/cpp/day03/: rucksackReorganization.cpp
2022/cpp/day04/: campCleanup.cpp
2022/cpp/day05/: supplyStacks.cpp
2022/cpp/day06/: tuningTrouble.cpp
2022/cpp/day07/: noSpaceLeftOnDevice.cpp
2022/cpp/day08/: treetopTreeHouse.cpp
2022/cpp/day09/: ropeBridge.cpp
2022/cpp/day10/: cathodeRayTube.cpp
2022/cpp/day11/: monkeyInTheMiddle.cpp
2022/cpp/day12/: hillClimbingAlgorithm.cpp
2022/cpp/day13/: distressSignal.cpp
2022/cpp/day14/: regolithReservoir.cpp
2022/cpp/day15/: beaconExclusionZone.cpp
2022/cpp/day16/: proboscideaVolcanium.cpp
2022/cpp/day17/: pyroclasticFlow.cpp
2022/cpp/include/: aoc.hpp
2024/haskell/: LICENSE  aoc.cabal  package.yaml  stack.yaml
2024/haskell/app/: Main.hs
2024/haskell/src/: Algorithm.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2025/haskell/: LICENSE  aoc.cabal  package.yaml  stack.yaml
2025/haskell/app/: Main.hs
2025/haskell/src/: Days.hs
(+37 files in other folders)
